--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <a href="{{ url_for('theory') }}" class="btn secondary">How it Works</a>
       </div>
     </div>
-    <img src="{{ url_for('static', filename='images/heart.png') }}" class="hero-img" alt="Heart Image">
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQww21CH0W3F3xLGjJTo3xRGwIiSoUWmBTYmw&s" class="hero-img" alt="Heart Image">
   </section>
  
 
