--- a/measure.html
+++ b/measure.html
@@ -5,6 +5,7 @@
   <style>
     body {
       font-family: Arial, sans-serif;
+      font-size: 16;
       background-color: #e8f7facb;
       margin: 0;
       padding: 0;
